JVKP/src/objects/branch__c.object
<CustomObject>
    <fields>
        <fullName>Branch_code__c</fullName>
        <label>Branch code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>extid__c</fullName>
        <externalId>true</externalId>
        <label>extid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>branch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>